--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Testing Plumbing Solutions</title>
     
-    <meta name="description" content="Testing Plumbing Solutions is a trusted provider of residential and commercial plumbing services, dedicated to delivering reliable, efficient, and high-quality workmanship. Our team of licensed professionals specializes in everything from routine maintenance and emergency repairs to full system installations and upgrades. With a commitment to customer satisfaction and safety, we ensure that every job is completed to the highest standards. Whether you're dealing with a leaky faucet, clogged drain, or planning a renovation, Testing Plumbing Solutions is your go-to partner for dependable plumbing expertise.">
+    <meta name="description" content="Testing Plumbing Solutions is a trusted provider of residential and commercial plumbing services, dedicated to delivering reliable, efficient, and high-quality workmanship.">
     <meta name="address" content="TBC">
 
     
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <h1>Nothing company</h1>
-        <p><strong>Business Description:</strong> Testing Plumbing Solutions is a trusted provider of residential and commercial plumbing services, dedicated to delivering reliable, efficient, and high-quality workmanship. Our team of licensed professionals specializes in everything from routine maintenance and emergency repairs to full system installations and upgrades. With a commitment to customer satisfaction and safety, we ensure that every job is completed to the highest standards. Whether you're dealing with a leaky faucet, clogged drain, or planning a renovation, Testing Plumbing Solutions is your go-to partner for dependable plumbing expertise. </p>
+        <p><strong>Business Description:</strong> Testing Plumbing Solutions is a trusted provider of residential and commercial plumbing services, dedicated to delivering reliable, efficient, and high-quality workmanship.</p>
         <p><strong>Business Address:</strong> TBC </p>
     </div>
 
