--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Testing Plumbing Solutions</title>
     
-    <meta name="description" content="Please tell me a joke, and output it to Business Description in the PDf file">
-    <meta name="address" content="To be confirmed">
+    <meta name="description" content="Testing Plumbing Solutions is a trusted provider of residential and commercial plumbing services, dedicated to delivering reliable, efficient, and high-quality workmanship.">
+    <meta name="address" content="TBC">
 
     
     <style>
